# rust

./: .gitattributes  README.md
actix_rust/: Cargo.toml  bash_test.sh
actix_rust/src/: main.rs
blockchain/: Cargo.toml
blockchain/models/: blockchain.rs  blocks.rs
blockchain/src/: main.rs
chapter-5/: main.rs
chapter-5/associated_func/: Cargo.toml
chapter-5/struct-pracrt/: Cargo.toml
chapter_10/generics/: largest  largest.rs  mixup  mixup.rs
chapter_3/: docs.md
chapter_4/: README.md  owenership  owenership.rs  scope.rs  string_basic  string_basic.rs
chapter_4_ressurection/ownership/: ownership.md  prog1  prog1.rs  (+7 more)
config_loader/: Cargo.toml  config.json
crud_rusty/: Cargo.toml  README.md
exercise/: Cargo.toml
file_system/: Cargo.toml
hello-wasm/: Cargo.toml
hello_project/: main  main.rs
iterator/: Cargo.toml
lifetimes/: docs.md
log-decoder/: Cargo.toml  logs.txt
multithreaded-server/: 2
package_test/: Cargo.toml
payTM/: Cargo.toml  Dockerfile  Dockerfile.bak
payTM/.github/workflows/: build.yaml
payTM/migrations/: 20251104123821_init.down.sql  20251104123821_init.up.sql
payTM/scripts/: deploy.sh
payTM/src/: handlers.rs  main.rs  model.rs
rpc_test/: Cargo.toml
snippet-manager/: Cargo.toml
sysinfo_gui/: Cargo.toml
text_analyzer/: Cargo.toml  README.md  lorem.txt  output.txt
todo-actix/: Cargo.toml  README.md
token_bucket/: Cargo.toml
traits/: docs.md
traits-revisit/: Cargo.toml
trial/: Cargo.toml  main
tui_crossterm/: Cargo.toml
web-test/: Cargo.toml  routes_test.sh
web_server/: 404.html  hello.html
(+110 files in other folders)
