[package]
name = "payTM"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "macros", "migrate" ] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
env_logger = "0.11.8"
